2008-08-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/notrans.test: Use multiple man files of each type.

	Fix maintainer-check failures.
	* doc/automake.texi (Conditionals): Drop TAB.
	* tests/missing6.test: Use 'rm -f'.

2008-08-19  Reuben Thomas <rrt@sc3d.org>  (tiny patch)

	* doc/automake.texi (Flag Variables Ordering, Per-Object Flags):
	Fix grammaros.

2008-08-02  Karl Berry  <karl@freefriends.org>

	* lib/gnupload: Provide also a simple example.

2008-06-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Small doc fix.
	* doc/automake.texi (Public Macros): Close open paren.

2008-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Introduce macro $(am__mv) to facilitate 'libtool --dry-run'.
	* lib/am/depend.am (am__mv): New macro, set to 'mv -f'.
	* lib/am/depend2.am: Use throughout to move the temporary
	depfile *.Tpo to its final destination *.Po.

2008-06-18  Rafael Espindola  <espindola@google.com>

	* lib/config-ml.in: don't handle --enable-shared and --enable-static.

2008-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/inst-vars.am (am__install_max): New variable.
	(am__nobase_list): Use it.

	Fix conditional rules competing with config.status rules.
	* automake.in (handle_configure): Teach targets about the
	conditional config.status rule.
	* tests/cond39.test: Adjust test to expose this.

	For AC_CONFIG_LINKS(X,X), do not clean X in a non-VPATH build.
	* automake.in (rewrite_inputs_into_dependencies): Do distribute
	inputs where input and output name are equal.  This relies on
	the assumption that it only happens with AC_CONFIG_LINKS.
	(handle_configure) <CONFIG_CLEAN_VPATH_FILES>: New variable, for
	links where source and dest are equal.
	* lib/am/clean.am (distclean-generic): Remove, if build tree not
	equal source tree.
	* tests/conflnk4.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS: Update.

2008-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Extending): Fix ambivalent wording.
	Report by Ben Pfaff.
