@@ -116,6 +116,7 @@ Harlan Stenn		Harlan.Stenn@pfcs.com
 He Li			tippa000@yahoo.com
 Henrik Frystyk Nielsen	frystyk@w3.org
 Ian Lance Taylor	ian@cygnus.com
+Ilya N. Golubev		gin@mo.msk.ru
 Imacat			imacat@mail.imacat.idv.tw
 Inoue			inoue@ainet.or.jp
 James Amundson		amundson@users.sourceforge.net
