@@ -1,3 +1,14 @@
+2008-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix rebuilding of removed subdir/Makefile.in files.
+	* lib/am/configure.am (%MAKEFILE-IN%) [?!TOPDIR_P?]: If
+	subdir/Makefile.in was removed, am--refresh would not update
+	it.  Fix up for it by running the per-directory rebuild rule.
+	* tests/remake6.test, tests/remake7.test: New tests.
+	* tests/Makefile.am: Adjust.
+	* NEWS, THANKS: Update.
+	Report and initial patch by Ilya N. Golubev.
+
 2008-08-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/notrans.test: Use multiple man files of each type.
